<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="@string/quiz_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/quizz_image" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name_a_programming_language_that_lets_you_write_more_idiomatic_code_and_is_interoperable_with_java"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_your_answer"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/build_system_for_android"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />


            <RadioGroup
                android:id="@+id/build_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/build_button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/java" />

                <RadioButton
                    android:id="@+id/build_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gradle" />

                <RadioButton
                    android:id="@+id/build_button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/support_library" />

                <RadioButton
                    android:id="@+id/build_button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dagger" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/layout_for_databinding"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/build_radio_group" />

            <RadioGroup
                android:id="@+id/layout_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/layout_button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/databinding" />

                <RadioButton
                    android:id="@+id/layout_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/constraintlayout" />

                <RadioButton
                    android:id="@+id/layout_button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/layout" />

                <RadioButton
                    android:id="@+id/layout_button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data_binding" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/which_are_viewgroups"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/layout_radio_group" />

            <CheckBox
                android:id="@+id/group_check1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/constraintlayout"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <CheckBox
                android:id="@+id/group_check2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/layout"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.287"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/group_check1" />

            <CheckBox
                android:id="@+id/group_check3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/linearlayout"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.127"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/group_check2" />

            <CheckBox
                android:id="@+id/group_check4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textview"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.525"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/group_check3" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="16dp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/group_check4" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
